--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.1.21",
     "react-scripts": "3.4.3",
     "webfontloader": "^1.6.28"
   },
